test: add integration test db, fix expected ncER output